# youtube_transcript_download_pro

./: .gitattributes  .gitignore  LICENSE  PRIVACY.md  README.md  pyproject.toml  render.yaml  wsgi.py
.claude/: launch.json
.github/: .gitignore  pyproject.toml
.github/src/tubescribe/: cli.py  core.py  formats.py
.github/tests/: test_server.py  test_sources.py
.github/workflows/: pages.yml
demo/: 3blue1brown-knowledge-graph.html
design/tubescribe-design/: SKILL.md  app-screen.html  component-library.html  design-model.yaml  landing-page.html  preview.html
design/tubescribe-design/references/: components.md  platform-mapping.md  tokens.md
extension/: README.md  content.js  inject.js  manifest.json  popup.html  popup.js
extension/store/: LISTING.md
skill/youtube-transcript/: SKILL.md
src/tubescribe/: __init__.py  cli.py  core.py  server.py  sources.py
src/tubescribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_server.py
web/: index.html
web/assets/: example-graph.html
